--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -13,6 +13,18 @@
     height: 25%;
     margin: 0%;
   }
+
+  .TopPage {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .TopPage div{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    align-self: center;
+  }
   
   .Background2 {
     display: flex;
@@ -23,12 +35,15 @@
     margin: 0%;
   }
   .Background2 img{
-    width: 50%;
-    height: 15%;
+    width: 53%;
+    height: 10%;
   }
 
   .Background3{
     background-color: white;
+  }
+
+  .Background3 div{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -52,6 +67,14 @@
 
   .WoloxFooter{
     content: url("../Ic_Wolox_Footer.svg");
+  }
+
+  .imgHero{
+    content: url("../ImgHero/Ic_ilustra_Hero@3x.png");
+    text-align: right;
+    width: 80%;
+    height: 90%;
+    transform: scaleX(-1);
   }
 
   .iconHour {
@@ -103,6 +126,22 @@
   display: block;
 }
 }
-@media screen and (max-width: 800px) {}
+@media screen and (max-width: 800px) {
+  .Background1 {
+    background-image: url('../Backgrounds/Bg_Header@2x.png');
+    background-color: white;
+    width: 100%;
+    height: 25%;
+    margin: 0%;
+  }
+}
 
-@media screen and (max-width: 300px) {}
+@media screen and (max-width: 300px) {
+  .Background1 {
+    background-image: url('../Backgrounds/Bg_Header.png');
+    background-color: white;
+    width: 100%;
+    height: 25%;
+    margin: 0%;
+  }
+}
