--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -13,7 +13,7 @@
   }
 
   .HeaderImg{
-    padding: 1%;
+    padding: 3% 0px 0px 0px;
     margin: inherit;
   }
 
@@ -29,6 +29,11 @@
     gap: 45%;
     margin-right: 28%;
   }
+
+  .HeaderAnchor{
+    text-decoration: none;
+  }
+
 
   .HeaderItem{
     flex-direction: column;
@@ -100,6 +105,22 @@
     display: block;
   }
 
+  .Bg2TextA{
+    font-style: 'Montserrat';
+    font-weight: bold;
+    color: rgb(145, 209, 49);
+  }
+
+  .Bg2TextB{
+    font-style: 'Montserrat';
+    color: rgb(27, 181, 253);
+  }
+
+  .Bg2TextC{
+    font-style: 'Montserrat';
+    color: rgb(255, 255, 255);
+  }
+
   .Bg2TwitterText {
     position: absolute;
     float: left;
@@ -121,12 +142,33 @@
     align-items: center;
   }
 
+  .Bg3TextA{
+    font-style: 'Montserrat';
+  }
+  .Bg3TextB{
+    font-style: 'Montserrat';
+    color: rgb(145, 209, 49);
+  }
+
   .Background4 {
     background-image: url('../Backgrounds/Bg_Footer@3x.png');
-    background-color: white;
-    width: 100%;
-    height: 10%;
-    margin: 0%;
+    margin: 4%;
+    align-content: center;
+  }
+
+  .Bg4TextA{
+    font-style: 'FiraSans';
+  }
+  
+  .Bg4TextB{
+    font-style: 'FiraSans';
+    font-weight: bold;
+    color: rgb(27, 181, 253);
+  }
+
+  .Bg4TextC{
+    font-style: 'Montserrat';
+    font-weight: lighter;
   }
 
   .Woloxer {
@@ -142,12 +184,38 @@
     content: url("../Ic_Wolox_Footer.svg");
   }
 
+  .CircledButtonLogin {
+    padding: 5px 30px;
+    background: rgba(255, 255, 255, 0);
+    border-radius: 100px 100px 100px 100px;
+  }
+
+  .CircledButtonLogin:hover {
+    background: rgb(66, 66, 66);
+    color: white;
+  }
+
   .imgHero{
     content: url("../ImgHero/Ic_ilustra_Hero@3x.png");
     text-align: right;
     width: 80%;
     height: 90%;
     transform: scaleX(-1);
+  }
+
+  .CircledButtonMore {
+    padding: 5px 30px;
+    background: rgb(23, 162, 243);
+    border-radius: 100px 100px 100px 100px;
+    border-color:rgb(23, 162, 243);
+
+    color: white;
+  }
+
+  .ButtonMoreText{
+    font-style: 'Montserrat';
+    font-weight: bold;
+    text-shadow: 2px 2px 4px #000000;
   }
 
 .iconList{
@@ -177,6 +245,7 @@
   align-content: center;
   text-align: initial;
   padding-top: 8%;
+  font-style: 'Montserrat';
 }
 
 .iconHour, .iconHomeOffice, .iconWorkshop, .iconSnacks, .iconRemote, .iconTechs{
