--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -24,7 +24,7 @@
 @font-face {
     font-family: 'Montserrat';
     src: url("../Fonts/Montserrat/Montserrat-SemiBold.ttf");
-    font-weight: 600;
+    font-weight: 600px;
 }
 
 @font-face {
