--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -42,7 +42,7 @@
   }
   
   .Background1 {
-    background-image: url('../Backgrounds/Bg_Header.png');
+    background-image: url('../Backgrounds/Bg_Header.png') no-repeat center center fixed;
     background-color: white;
     width: 100%;
     height: 25%;
@@ -88,7 +88,7 @@
   .Background2 {
     display: flex;
     flex-direction: row;
-    background-color: rgb(213, 218, 241);
+    background-color: #f2f5fa;
     width: 100%;
     height: 25%;
     margin: 0%;
