--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -5,6 +5,7 @@
         padding: 0;
         font-family: 'Montserrat';
         background: white;
+        background-image: url('../Backgrounds/Bg_Header.png');
     }
     
     .loginForm{
