--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -37,8 +37,20 @@
         padding: 14px 10px;
         width: 200px;
         outline: none;
-        color: white;
+        color: rgb(0, 0, 0);
         border-radius: 24px;
+        transition: 0.25s;
+    }
+
+    .loginForm span{
+        border: 0;
+        background: none;
+        display: block;
+        margin: 20px auto;
+        text-align: center;
+        width: 200px;
+        outline: none;
+        color: rgb(230, 28, 28);
         transition: 0.25s;
     }
     
@@ -104,7 +116,7 @@
         padding: 14px 10px;
         width: 150px;
         outline: none;
-        color: white;
+        color: rgb(0, 0, 0);
         border-radius: 24px;
         transition: 0.25s;
     }
