Se hace responsive el formulario de registro.

--- a/src/assets/css/register.css
+++ b/src/assets/css/register.css
@@ -7,6 +7,10 @@
         background: white;
         background-image: url('../Backgrounds/Bg_Header.png');
     }
+
+    .flex-container{
+        display: flex;
+    }
     
     .registerForm{
         width: 300px;
@@ -132,10 +136,10 @@
         border: 0;
         background: none;
         display: block;
-        margin: 20px auto;
+        margin: 4px auto;
         text-align: center;
         border: 2px solid #3498db;
-        padding: 14px 10px;
+        padding: 3px 10px;
         width: 150px;
         outline: none;
         color: rgb(0, 0, 0);
@@ -147,10 +151,10 @@
         border: 0;
         background: none;
         display: block;
-        margin: 20px auto;
+        margin: 4px auto;
         text-align: center;
         border: 2px solid #3498db;
-        padding: 14px 10px;
+        padding: 3px 10px;
         width: 200px;
         outline: none;
         color: rgb(0, 0, 0);
@@ -178,7 +182,7 @@
         margin: 20px auto;
         text-align: center;
         border: 2px solid #2ecc71;
-        padding: 14px 40px;
+        padding: 7px 40px;
         outline: none;
         color: rgb(0, 0, 0);
         border-radius: 24px;
