--- a/src/assets/css/technology.css
+++ b/src/assets/css/technology.css
@@ -11,3 +11,56 @@
     align-items: center;
     justify-content: center;
 }
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  .topnav a {
+    float: right;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+
+  .topnav span{
+    background: #333;
+    background-image: url("../image/like.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    float: right;
+    color: #000000;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+  }
+
+.CircledButton {
+    padding: 10px 80px;
+    background: rgb(0, 0, 0);
+    border-radius: 100px 100px 100px 100px;
+    border-color: rgb(0, 0, 0);
+    color: white;
+  }
+
+  .CircledButton:hover {
+    padding: 10px 80px;
+    background: red;
+    border-radius: 100px 100px 100px 100px;
+    border-color:red;
+    color: white;
+  }
+
