--- a/src/assets/css/technology.css
+++ b/src/assets/css/technology.css
@@ -1,17 +1,19 @@
+@import url("fonts.css");
 
-.wrapper{
+@media screen and (max-width: 1500px) {
+  .wrapper{
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
-
-.row{
+  }
+  
+  .row{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-}
-.topnav {
+  }
+  .topnav {
     overflow: hidden;
     background-color: #333;
   }
@@ -24,7 +26,7 @@
     text-decoration: none;
     font-size: 17px;
   }
-
+  
   .topnav span{
     background: #333;
     background-image: url("../image/like.svg");
@@ -47,15 +49,15 @@
     background-color: #4CAF50;
     color: white;
   }
-
-.CircledButton {
+  
+  .CircledButton {
     padding: 10px 80px;
     background: rgb(0, 0, 0);
     border-radius: 100px 100px 100px 100px;
     border-color: rgb(0, 0, 0);
     color: white;
   }
-
+  
   .CircledButton:hover {
     padding: 10px 80px;
     background: red;
@@ -63,4 +65,230 @@
     border-color:red;
     color: white;
   }
+  
+  .items{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 500px;
+    margin: auto;
+    text-align: center;
+    font-family: 'Montserrat';
+    flex-basis: 33.333333%
+  }
+  
+  .card img{
+    width: 20%;
+    height: 20%;
+    float: left;
+  }
+  
+  .card span{
+    color:rgb(0, 0, 0);
+    display: block;
+    position: relative;
+    margin: auto;
+  }
+  
+  .card h3{
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  
+  .row{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  .topnav {
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  .topnav a {
+    float: right;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav span{
+    background: #333;
+    background-image: url("../image/like.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    float: right;
+    color: #000000;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+  }
+  
+  .CircledButton {
+    padding: 10px 80px;
+    background: rgb(0, 0, 0);
+    border-radius: 100px 100px 100px 100px;
+    border-color: rgb(0, 0, 0);
+    color: white;
+  }
+  
+  .CircledButton:hover {
+    padding: 10px 80px;
+    background: red;
+    border-radius: 100px 100px 100px 100px;
+    border-color:red;
+    color: white;
+  }
+  
+  .items{
+    display: block;
+  }
+  
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 500px;
+    margin: auto;
+    text-align: center;
+    font-family: 'Montserrat';
+  }
+  
+  .card img{
+    width: 20%;
+    height: 20%;
+    float: left;
+  }
+  
+  .card span{
+    color:rgb(0, 0, 0);
+    display: block;
+    position: relative;
+    margin: auto;
+  }
+  
+  .card h3{
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 300px) {
+  .wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  
+  .row{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  .topnav {
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  .topnav a {
+    float: right;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav span{
+    background: #333;
+    background-image: url("../image/like.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    float: right;
+    color: #000000;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+  }
+  
+  .CircledButton {
+    padding: 10px 80px;
+    background: rgb(0, 0, 0);
+    border-radius: 100px 100px 100px 100px;
+    border-color: rgb(0, 0, 0);
+    color: white;
+  }
+  
+  .CircledButton:hover {
+    padding: 10px 80px;
+    background: red;
+    border-radius: 100px 100px 100px 100px;
+    border-color:red;
+    color: white;
+  }
+  
+  .items{
+    display: block;
+  }
+  
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 500px;
+    margin: auto;
+    text-align: center;
+    font-family: 'Montserrat';
+  }
+  
+  .card img{
+    width: 20%;
+    height: 20%;
+    float: left;
+  }
+  
+  .card span{
+    color:rgb(0, 0, 0);
+    display: block;
+    position: relative;
+    margin: auto;
+  }
+  
+  .card h3{
+    text-align: center;
+  }
+}
+
+
 
