--- a/src/assets/css/technology.css
+++ b/src/assets/css/technology.css
@@ -40,12 +40,12 @@
     font-size: 17px;
   }
   
-  .topnav a:hover {
+  .topnav button:hover {
     background-color: #ddd;
     color: black;
   }
   
-  .topnav a.active {
+  .topnav button.active {
     background-color: #4CAF50;
     color: white;
   }
