--- a/src/assets/css/technology.css
+++ b/src/assets/css/technology.css
@@ -18,6 +18,20 @@
     background-color: #333;
   }
   
+  .filters{
+    display: block;
+    text-align: center;
+  }
+
+  .total{
+    display: block;
+    text-align: center;
+  }
+
+  .total span{
+    font-size: 2rem;
+  }
+
   .topnav a {
     float: right;
     color: #f2f2f2;
@@ -107,6 +121,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+  }
+
+  .filters{
+    display: block;
+    text-align: center;
   }
   
   .row{
@@ -203,6 +222,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+  }
+
+  .filters{
+    display: block;
+    text-align: center;
   }
   
   .row{
