--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -1,5 +1,11 @@
 @import url("fonts.css");
 
+/* * {
+  background: #000 !important;
+  color: #0f0 !important;
+  outline: solid #f00 1px !important;
+} */
+
 @media screen and (max-width: 2000px) {
 
   .flex-container {
@@ -1245,11 +1251,13 @@
 }
 
 @media screen and (max-width: 300px) {
+
   .flex-container {
     display: flex;
     flex-direction: column;
     background-color: white;
     padding: 0%;
+    margin: 0;
   }
 
   .HeaderBox{
@@ -1257,14 +1265,13 @@
   }
 
   .HeaderImg{
-    padding: 10% 0px 20px 36px;
+    padding: 10% 0px 12px 95px;
     margin: inherit;
-    width: 100%;
+    width: 66%;
     float: left;
   }
 
   .HeaderPush{
-    padding: 2px;
     margin-left:auto;
     display: inline-flex;
     align-content: stretch;
@@ -1272,8 +1279,10 @@
     flex-wrap: initial;
     justify-content: space-between;
     align-items: center;
-    gap: 5%;
+    gap: 25%;
     margin-right: 28%;
+    width: 66%;
+    padding: 0px 0px 0px 15px;
   }
 
   .HeaderAnchor{
@@ -1292,7 +1301,8 @@
     background-color: white;
     width: 100%;
     height: 25%;
-    margin: 0%;
+    background-size: cover;
+    align-content: center;
   }
 
   .TopPage {
@@ -1303,7 +1313,7 @@
   .TopPage div{
     display: flex;
     flex-direction: column;
-    width: 30%;
+    width: 62%;
     align-self: center;
   }
 
@@ -1338,7 +1348,7 @@
     display: flex;
     flex-direction: row;
     background-color: #f2f5fa;
-    width: 55%;
+    width: 100%;
     height: 25%;
     margin: 0%;
   }
@@ -1346,6 +1356,7 @@
   .Bg2Container{
     position: relative;
     text-align: center;
+    margin: auto;
   }
 
   .Bg2TwitterImg{
@@ -1376,6 +1387,7 @@
   .Bg2TwitterText {
     position: absolute;
     float: left;
+    top: 25%;
     line-height: 1px;
     transform: translate(-50%, -50%);
   }
@@ -1394,6 +1406,14 @@
 
   .Background3{
     background-color: white;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .Background3 h4{
+    display: block;
+    text-align: center;
+    width: 100%;
   }
 
   .Background3 div{
@@ -1415,6 +1435,10 @@
     background-size: cover;
     margin: 4%;
     align-content: center;
+  }
+
+  .Background4 a{
+    padding: 0px 0px 0px 14px;
   }
 
   .Bg4TextA{
@@ -1439,7 +1463,8 @@
   .WoloxHead{
     content: url("../logo_full_color.svg");
     height: 6%;
-    width: 30%;
+    width: 40%;
+    float: left;
   }
 
   .WoloxFooter{
@@ -1474,7 +1499,7 @@
   }
 
   .imgHero{
-    content: url("../ImgHero/Ic_ilustra_Hero@3x.png");
+    content: url("../ImgHero/Ic_ilustra_Hero.png");
     text-align: right;
     width: 80%;
     height: 90%;
@@ -1497,12 +1522,16 @@
   }
 
 .iconList{
-  margin: 3%;
   align-content: stretch;
   text-align: center;
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
+  width: auto;
+  display: block;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
   }
 
   .iconList p{
@@ -1525,6 +1554,8 @@
   text-align: initial;
   padding-top: 28%;
   font-style: 'Montserrat';
+  font-size: 10px;
+  line-height: 40px;
 }
 
 .iconHour, .iconHomeOffice, .iconWorkshop, .iconSnacks, .iconRemote, .iconTechs{
