--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -941,12 +941,14 @@
 }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 768px) {
+
   .flex-container {
     display: flex;
     flex-direction: column;
     background-color: white;
     padding: 0%;
+    margin: 0;
   }
 
   .HeaderBox{
@@ -954,13 +956,13 @@
   }
 
   .HeaderImg{
-    padding: 10% 0px 0px 0px;
+    padding: 4% 0px 12px 159px;
     margin: inherit;
-    width: 100%;
+    width: 66%;
+    float: left;
   }
 
   .HeaderPush{
-    padding: 1%;
     margin-left:auto;
     display: inline-flex;
     align-content: stretch;
@@ -968,8 +970,9 @@
     flex-wrap: initial;
     justify-content: space-between;
     align-items: center;
-    gap: 15%;
+    gap: 25%;
     margin-right: 28%;
+    padding: 0px 0px 0px 125px;
   }
 
   .HeaderAnchor{
@@ -988,7 +991,8 @@
     background-color: white;
     width: 100%;
     height: 25%;
-    margin: 0%;
+    background-size: cover;
+    align-content: center;
   }
 
   .TopPage {
@@ -999,7 +1003,7 @@
   .TopPage div{
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 62%;
     align-self: center;
   }
 
@@ -1013,17 +1017,20 @@
     display: block;
     font-weight: lighter;
     text-align: justify;
+    font-size: 9px;
   }
 
   .Bg1TextA{
     font-family: 'Montserrat';
     font-weight: bold;
     text-align: left;
+    font-size: 9px;
   }
 
   .Bg1TextB{
     font-family: 'Montserrat';
     font-weight: bold;
+    font-size: 9px;
     color: rgb(145, 209, 49);
   }
   
@@ -1039,6 +1046,7 @@
   .Bg2Container{
     position: relative;
     text-align: center;
+    margin: auto;
   }
 
   .Bg2TwitterImg{
@@ -1050,27 +1058,27 @@
   .Bg2TextA{
     font-style: 'Montserrat';
     font-weight: bold;
-    font-size: 3rem;
+    font-size: 40px;
     color: rgb(145, 209, 49);
   }
 
   .Bg2TextB{
     font-style: 'Montserrat';
-    font-size: 3rem;
+    font-size: 40px;
     color: rgb(27, 181, 253);
   }
 
   .Bg2TextC{
     font-style: 'Montserrat';
-    font-size: 2rem;
+    font-size: 30px;
     color: rgb(255, 255, 255);
   }
 
   .Bg2TwitterText {
     position: absolute;
     float: left;
-    top: 15%;
-    left: 50%;
+    top: 25%;
+    line-height: 40px;
     transform: translate(-50%, -50%);
   }
 
@@ -1078,16 +1086,28 @@
     padding: 10%;
   }
 
+  .Bg2LeftText h2{
+    line-height: 80px;
+  }
+
   .TextBigA{
-    font-size: 3rem;
+    font-size: 40px;
   }
   
   .TextBigB{
-    font-size: 2rem;
+    font-size: 40px;
   }
 
   .Background3{
     background-color: white;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .Background3 h4{
+    display: block;
+    text-align: center;
+    width: 100%;
   }
 
   .Background3 div{
@@ -1111,6 +1131,10 @@
     align-content: center;
   }
 
+  .Background4 a{
+    padding: 0px 0px 0px 14px;
+  }
+
   .Bg4TextA{
     font-style: 'Montserrat';
   }
@@ -1132,8 +1156,9 @@
 
   .WoloxHead{
     content: url("../logo_full_color.svg");
-    height: 12%;
-    width: 60%;
+    height: 6%;
+    width: 40%;
+    float: left;
   }
 
   .WoloxFooter{
@@ -1141,11 +1166,15 @@
   }
 
   .CircledButtonTwitter {
-    padding: 10px 80px;
+    padding: 10px 25px;
     background: rgba(8, 180, 248, 0);
     border-radius: 100px 100px 100px 100px;
     border-color: rgba(8, 180, 248, 0.945);
     color: white;
+  }
+
+  .CircledButtonTwitter span{
+    font-size: 25px;
   }
 
   .CircledButtonTwitter:hover {
@@ -1153,7 +1182,7 @@
   }
 
   .CircledButtonLogin {
-    padding: 5px 30px;
+    padding: 2px 10px;
     background: rgba(255, 255, 255, 0);
     border-radius: 100px 100px 100px 100px;
   }
@@ -1164,7 +1193,7 @@
   }
 
   .imgHero{
-    content: url("../ImgHero/Ic_ilustra_Hero@3x.png");
+    content: url("../ImgHero/Ic_ilustra_Hero.png");
     text-align: right;
     width: 80%;
     height: 90%;
@@ -1172,7 +1201,7 @@
   }
 
   .CircledButtonMore {
-    padding: 5px 30px;
+    padding: 2px 15px;
     background: rgb(23, 162, 243);
     border-radius: 100px 100px 100px 100px;
     border-color:rgb(23, 162, 243);
@@ -1187,12 +1216,16 @@
   }
 
 .iconList{
-  margin: 3%;
   align-content: stretch;
   text-align: center;
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
+  width: auto;
+  display: block;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
   }
 
   .iconList p{
@@ -1215,6 +1248,8 @@
   text-align: initial;
   padding-top: 28%;
   font-style: 'Montserrat';
+  font-size: 20px;
+  line-height: 30px;
 }
 
 .iconHour, .iconHomeOffice, .iconWorkshop, .iconSnacks, .iconRemote, .iconTechs{
@@ -1250,7 +1285,7 @@
 }
 }
 
-@media screen and (max-width: 300px) {
+@media screen and (max-width: 320px) {
 
   .flex-container {
     display: flex;
